# SliyanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
include/app/: Application.hpp  Settings.hpp
include/core/: ShaderProgram.hpp
include/gui/: Gui.hpp  GuiLayout.hpp  PlacementMode.hpp
include/gui/panels/: AddShapePopup.hpp  ConsolePanel.hpp  ContextMenuPopup.hpp  GizmoPanel.hpp  InspectorPanel.hpp  MenuBarPanel.hpp  ScenePanel.hpp  ToolbarPanel.hpp  ViewportPanel.hpp
include/input/: InputHandler.hpp
include/render/: GridAxisRenderer.hpp  ViewportRenderer.hpp
include/render/gizmo/: GizmoRenderer.hpp  TranslationGizmoRenderer.hpp
include/scene/: Scene.hpp
include/scene/camera/: Camera.hpp  ICameraViewStrategy.hpp
include/scene/camera/views/: FrontViewStrategy.hpp  IsometricViewStrategy.hpp  SideViewStrategy.hpp  TopViewStrategy.hpp
include/scene/commands/: AddCircleModeCommand.hpp  AddCubeModeCommand.hpp  AddRectangleModeCommand.hpp  AddSphereModeCommand.hpp  AddTriangleModeCommand.hpp  CommandId.hpp  DeleteShapeCommand.hpp  DisableAddShapeModeCommand.hpp  ICommand.hpp  OpenAddShapeDialogCommand.hpp  SetCameraViewCommand.hpp
include/scene/selection/: SelectionManager.hpp
include/scene/shapes/: Circle.hpp  Cube.hpp  Rectangle.hpp  Round.hpp  Shape.hpp  Shape3D.hpp  ShapeType.hpp  Sphere.hpp  Triangle.hpp
include/scene/shapes/2d/: Circle.hpp  Rectangle.hpp  Shape2D.hpp  Triangle.hpp
include/scene/shapes/3d/: Cube.hpp  Sphere.hpp
include/util/: readFile.hpp
include/viewport/: Viewport.hpp
src/: main.cpp
src/app/: Application.cpp
src/core/: ShaderProgram.cpp
src/core/shaders/: fragmentShader.frag  outlineFragmentShader.frag  vertexShader.vert
src/gui/: Gui.cpp
src/gui/panels/: AddShapePopup.cpp  ConsolePanel.cpp  ContextMenuPopup.cpp  GizmoPanel.cpp  InspectorPanel.cpp  MenuBarPanel.cpp  ScenePanel.cpp  ToolbarPanel.cpp  ViewportPanel.cpp
src/input/: InputHandler.cpp
src/render/: GridAxisRenderer.cpp  ViewportRenderer.cpp
src/render/gizmo/: GizmoRenderer.cpp  TranslationGizmoRenderer.cpp
src/scene/: Scene.cpp
src/scene/camera/: Camera.cpp
src/scene/camera/views/: FrontViewStrategy.cpp  IsometricViewStrategy.cpp  SideViewStrategy.cpp  TopViewStrategy.cpp
src/scene/commands/: AddCircleModeCommand.cpp  AddCubeModeCommand.cpp  AddRectangleModeCommand.cpp  AddSphereModeCommand.cpp  AddTriangleModeCommand.cpp  DeleteShapeCommand.cpp  DisableAddShapeModeCommand.cpp  OpenAddShapeDialogCommand.cpp  SetCameraViewCommand.cpp
src/scene/selection/: SelectionManager.cpp
src/scene/shapes/: Circle.cpp  Cube.cpp  Rectangle.cpp  Round.cpp  Shape.cpp  Shape2D.cpp  Shape3D.cpp  Sphere.cpp  Triangle.cpp
src/scene/shapes/2d/: Circle.cpp  Rectangle.cpp  Shape2D.cpp  Triangle.cpp
src/scene/shapes/3d/: Cube.cpp  Shape3D.cpp  Sphere.cpp
src/util/: readFile.cpp
src/viewport/: Viewport.cpp
